Fix z-index for dragdrop anchor.

--- a/styles/core.css
+++ b/styles/core.css
@@ -262,9 +262,10 @@
 .drag-drop-anchor {
   top: -99999px;
   position: absolute;
-  border: 2px dashed dodgerblue;
+  border: 1px dashed dodgerblue;
   width: 100%;
   pointer-events: none;
+  z-index: 10;
 }
 
 @media (max-width: 500px) {
